# clawpolicy

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  ISSUES_FOUND.md  LICENSE  LICENSE_SOURCE_OF_TRUTH.md  MANIFEST.in  README.md  README.zh-CN.md  README_EN.md  RELEASING.md  RELEASING.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  SUPPORT.zh-CN.md  claude-progress.txt  demo.tape  demo_recording.py  disaster_demo.py  feature_list.json  install.sh  pyproject.toml  quick_start.tape  task_plan.md
.clawpolicy/: .gitignore  AGENTS.md  SOUL.md
.github/workflows/: ci.yml  release.yml
.openclaw_memory/: USER.md
audit/: final-report.md  findings.md  fix-log.md
clawpolicy/: __init__.py  __main__.py  cli.py
config/: config.json
docs/: architecture.md  architecture.zh-CN.md  configuration.md  configuration.zh-CN.md  phase3-optional-deps.md  phase3-optional-deps.zh-CN.md  reward-model.zh-CN.md
lib/: __init__.py  agent.py  api.py  cli.py  collector.py  contracts.py  distributed_trainer.py  environment.py  experience_replay.py  hyperparameter_tuner.py  integration.py  learner.py  monitoring.py  nn_model.py  paths.py  performance_optimizer.py  policy_store.py  reward.py  trainer.py
models/distributed/test_proj_1/final/: metadata.json  policy_network.json  training_stats.json  value_network.json
scripts/: check_clawhub_consistency.py  check_docs_consistency.py  install.py  publish_clawhub_manual.mjs
skills/: intent-alignment.md  意图对齐.md
templates/: AGENTS_template.md  SOUL_template.md  USER_template.md
tests/: test_agent_policy.py  test_alignment.py  test_confirmation_api_bootstrap.py  test_contracts.py  test_docs_consistency.py  test_environment.py  test_integration_cli.py  test_integration_engine.py  test_language_policy.py  test_learner_history.py  test_path_consistency.py  test_phase3.py  test_policy_memory_integration.py  test_policy_promotion.py  test_policy_store.py  test_release_readiness.py  test_reward.py
