[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawpolicy"
version = "3.0.1"
description = "Explainable autonomous execution policy engine for ClawPolicy workflows"
readme = "README.md"
license = "MIT"
authors = [
  { name = "ClawPolicy Contributors" }
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24"
]
keywords = ["reinforcement-learning", "policy", "clawpolicy", "actor-critic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/DZMing/clawpolicy"
Repository = "https://github.com/DZMing/clawpolicy"
Issues = "https://github.com/DZMing/clawpolicy/issues"

[project.optional-dependencies]
phase3 = [
  "redis>=5.0",
  "celery>=5.3",
  "torch>=2.2",
  "tensorboard>=2.15",
  "numba>=0.59",
  "scipy>=1.11",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "build>=1.2",
  "twine>=5.0",
  "pip-audit>=2.7",
  "ruff>=0.6",
  "mypy>=1.10",
  "redis>=5.0",
  "celery>=5.3",
]

[project.scripts]
clawpolicy = "clawpolicy.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "clawpolicy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
